# zksync-airbender

./: Cargo.toml  build.sh  recreate_verifiers.sh  rust-toolchain.toml
.github/workflows/: anvil-bender-docker.yaml  check-verifiers.yml  ci.yml  test-gpu.yaml  test-gpu.yml
circuit_defs/keccak_with_control/: Cargo.toml
cs/: add_sub_lui_auipc_mop_preprocessed_layout.json  add_sub_lui_auipc_mop_preprocessed_ssa.json  bigint_delegation_layout.json  bigint_delegation_ssa.json  blake_delegation_layout.json  blake_delegation_ssa.json  full_machine_with_delegation_layout.json  full_machine_with_delegation_ssa.json  full_machine_with_delegation_without_signed_mul_div_layout.json  inits_and_teardowns_preprocessed_layout.json  jump_branch_slt_preprocessed_layout.json  jump_branch_slt_preprocessed_ssa.json  keccak_delegation_layout.json  keccak_delegation_ssa.json  load_store_preprocessed_layout.json  load_store_preprocessed_ssa.json  minimal_machine_with_delegation_layout.json  minimal_machine_with_delegation_ssa.json  mul_div_preprocessed_layout.json  mul_div_unsigned_preprocessed_layout.json  mul_div_unsigned_preprocessed_ssa.json  shift_binop_csrrw_preprocessed_layout.json  shift_binop_csrrw_preprocessed_ssa.json  subword_only_load_store_preprocessed_layout.json  subword_only_load_store_preprocessed_ssa.json  word_only_load_store_preprocessed_layout.json  word_only_load_store_preprocessed_ssa.json
cs/src/: lib.rs  (+4 more)
docs/: circuit_entry_points.md  instruction_gadgets.md  machine_configuration.md  simulator_supported_instructions.md  tests_overview.md
execution_utils/: final_recursion_over_final_recursion_layer.json
gpu_prover/: Cargo.toml
playground/: Cargo.toml
playground/src/: batch_prover.rs  cpu_worker.rs  gpu_manager.rs  gpu_worker.rs  logger.rs  main.rs  messages.rs  old_tracer.rs  precomputations.rs  tracer.rs
prover/: add_sub_lui_auipc_mop_preprocessed_generated.rs  full_machine_with_delegation_generated.rs  jump_branch_slt_preprocessed_generated.rs  keccak_delegation_generated.rs  minimal_machine_with_delegation_generated.rs  mul_div_unsigned_preprocessed_generated.rs  shift_binop_csrrw_preprocessed_generated.rs
risc_v_simulator/: Cargo.toml
verifier_profiler/: Cargo.toml  compile_testing_verifiers.sh  create_testing_verifiers.sh  profiling_configs.json  run_profiler.sh
verifier_profiler/circuit_files/: full_machine_2^20_4_2nd_word_bits_generated.rs  full_machine_2^21_4_2nd_word_bits_circuit_layout.rs  full_machine_2^21_4_2nd_word_bits_generated.rs  full_machine_2^21_4_2nd_word_bits_layout.json  full_machine_2^21_4_2nd_word_bits_quotient.rs  full_machine_2^22_4_2nd_word_bits_layout.json  full_machine_2^23_4_2nd_word_bits_generated.rs  full_machine_2^23_4_2nd_word_bits_layout.json
verifier_profiler/proofs/: full_machine_2^20_4_2nd_word_bits_proof.json  full_machine_2^21_4_2nd_word_bits_proof.json
verifier_profiler/src/: circuit_files.rs  main.rs  profiling.rs  testing_prover.rs  witness_generation_functions.rs
verifier_profiler/verifier_for_compilation/src/: main.rs
verifier_profiler/verifiers/full_machine_2^20_4_2nd_word_bits/verifier_for_compilation/: Cargo.toml  tester.text
verifier_profiler/verifiers/full_machine_2^21_4_2nd_word_bits/verifier_for_compilation/: build_for_testing.sh  tester.text
(+282 files in other folders)
