[package]
name = "zksync_os_verifier"
version = "0.1.0"
edition = "2021"
authors = ["The Matter Labs Team <hello@matterlabs.dev>"]
homepage = "https://zksync.io/"
repository = "https://github.com/matter-labs/zksync-airbender/"
license = "MIT OR Apache-2.0"
keywords = ["blockchain", "zksync", "zk"]
categories = ["cryptography"]

[dependencies]
verifier = { path = "../verifier", features = ["verifier_program", "blake2_with_compression"] }
riscv_common = { path = "../../../../riscv_common"}

[workspace]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
debug = false
strip = true

[features]
panic_output = ["riscv_common/uart", "riscv_common/custom_panic"]


[profile.cli]
inherits = "dev"
opt-level = 3
debug = false
panic = "abort"
# strip = true
lto = "thin"

[profile.release_with_symbols]
inherits = "release"
debug = 2
strip = false
